added a short bio

--- a/index.html
+++ b/index.html
@@ -5,17 +5,30 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Ansh Poonia</title>
+    <meta name="author" content="Ansh Poonia">
+    <meta name="description" content="Ansh Poonia's website.">
+    <link rel="canonical" href="http://anshpoonia.github.io/">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: sans-serif, serif;
-            line-height: 1.4;
+            font-family: "Roboto", sans-serif, serif;
+            font-weight: 300;
             font-size: 16px;
+
+            line-height: 1.4;
             margin: 50px auto;
             max-width: 710px;
             padding: 0 10px;
+
             color: #000;
             background: #fff;
+
             counter-reset: footnote reference;
         }
 
@@ -30,6 +43,17 @@
         a {
             text-decoration: none;
             color: #7777fb;
+        }
+
+        .profile_picture{
+            float: right;
+            width: 10rem;
+            height: 10rem;
+            object-fit: cover;
+            border-radius: 1rem;
+            margin: 0 0 20px 30px;
+            box-shadow: 0 0 100px rgba(0, 0, 0, 0.05);
+            clear: right;
         }
 
         .prof_link {
@@ -77,6 +101,7 @@
     <h2>Ansh Poonia</h2>
 </p>
 
+<!--Personal Links-->
 <p>
     <a href="/blog" class="prof_link">Blog</a> &bull;
     <a href="https://scholar.google.com/citations?user=1OnE7wUAAAAJ" class="prof_link">Scholar</a> &bull;
@@ -84,6 +109,28 @@
     <a href="mailto:pooniaansh11@gmail.com" class="prof_link">Email</a> &bull;
     <a href="/cv.pdf" class="prof_link">CV</a>
 </p>
+
+<!--Profile Picture-->
+<img src="static/img/profile_pic.jpeg" alt="Ansh Poonia" class="profile_picture">
+
+<!--Intro bio-->
+<p>
+    I am currently investigating how persona-driven behavior emerges in language models, with a focus on understanding the underlying mechanisms that govern such behavioral patterns.
+</p>
+
+<p>
+    I also work as a Data Scientist at Kantar Analytics Practice in Chennai, where I primarily contribute to research and development efforts aimed at improving the optimization of Bayesian models for Mixed-Market Modeling.
+</p>
+
+<p>
+    <h3>Updates</h3>
+    <ul>
+        <li>My first <a href="https://arxiv.org/abs/2507.20936">paper</a> as an independent researcher has been accepted at EMNLP <i>Finding</i> 2025.</li>
+    </ul>
+</p>
+
+
+
 
 </body>
 </html>
