--- a/index.html
+++ b/index.html
@@ -13,39 +13,12 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+          rel="stylesheet">
 
+    <link rel="stylesheet" href="/static/css/base_style.css">
     <style>
-        body {
-            font-family: "Roboto", sans-serif, serif;
-            font-weight: 300;
-            font-size: 16px;
-
-            line-height: 1.4;
-            margin: 50px auto;
-            max-width: 710px;
-            padding: 0 10px;
-
-            color: #000;
-            background: #fff;
-
-            counter-reset: footnote reference;
-        }
-
-        ul {
-            margin: 0.5em 0 1em 1em;
-        }
-
-        p {
-            box-sizing: border-box;
-        }
-
-        a {
-            text-decoration: none;
-            color: #7777fb;
-        }
-
-        .profile_picture{
+        .profile_picture {
             float: right;
             width: 10rem;
             height: 10rem;
@@ -56,13 +29,7 @@
             clear: right;
         }
 
-        .prof_link {
-            background-color: rgba(208, 208, 255, 0.15);
-            padding: 0.2em;
-            border-radius: 0.2em;
-        }
-
-        .fn-ref{
+        .fn-ref {
             counter-increment: footnote;
             background-color: #fff;
             padding: 0;
@@ -77,7 +44,7 @@
             border-radius: 0.1em;
         }
 
-        .rf-ref{
+        .rf-ref {
             counter-increment: reference;
             background-color: #fff;
             padding: 0;
@@ -93,12 +60,11 @@
         }
 
 
-
     </style>
 </head>
 <body>
 <p>
-    <h2>Ansh Poonia</h2>
+<h2>Ansh Poonia</h2>
 </p>
 
 <!--Personal Links-->
@@ -107,29 +73,31 @@
     <a href="https://scholar.google.com/citations?user=1OnE7wUAAAAJ" class="prof_link">Scholar</a> &bull;
     <a href="https://github.com/anshpoonia" class="prof_link">Github</a> &bull;
     <a href="mailto:pooniaansh11@gmail.com" class="prof_link">Email</a> &bull;
-    <a href="/cv.pdf" class="prof_link">CV</a>
+    <a href="/static/files/cv.pdf" class="prof_link">CV</a>
 </p>
 
 <!--Profile Picture-->
-<img src="static/img/profile_pic.jpeg" alt="Ansh Poonia" class="profile_picture">
+<img src="./static/img/profile_pic.jpeg" alt="Ansh Poonia" class="profile_picture">
 
 <!--Intro bio-->
 <p>
-    I am currently investigating how persona-driven behavior emerges in language models, with a focus on understanding the underlying mechanisms that govern such behavioral patterns.
+    I am currently investigating how persona-driven behavior emerges in language models to understand the underlying
+    mechanisms that govern such behavioral patterns.
 </p>
 
 <p>
-    I also work as a Data Scientist at Kantar Analytics Practice in Chennai, where I primarily contribute to research and development efforts aimed at improving the optimization of Bayesian models for Mixed-Market Modeling.
+    I also work as a Data Scientist at Kantar Analytics Practice in Chennai, where I primarily contribute to research
+    and development efforts aimed at improving the optimization of Bayesian models for Mixed-Market Modeling.
 </p>
 
 <p>
-    <h3>Updates</h3>
-    <ul>
-        <li>My first <a href="https://arxiv.org/abs/2507.20936">paper</a> as an independent researcher has been accepted at EMNLP <i>Finding</i> 2025.</li>
-    </ul>
+<h3>Updates</h3>
+<ul>
+    <li>My first <a href="https://arxiv.org/abs/2507.20936">paper</a> as an independent researcher has been accepted at
+        EMNLP <i>Finding</i> 2025.
+    </li>
+</ul>
 </p>
-
-
 
 
 </body>
