added blog: review system

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Ansh Poonia</title>
     <meta name="author" content="Ansh Poonia">
     <meta name="description" content="Ansh Poonia's website.">
-    <link rel="canonical" href="http://anshpoonia.github.io/">
+    <link rel="canonical" href="https://anshpoonia.github.io/">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,11 +69,11 @@
 
 <!--Personal Links-->
 <p>
-    <a href="/blog" class="prof_link">Blog</a> &bull;
+    <a href="./blog" class="prof_link">Blog</a> &bull;
     <a href="https://scholar.google.com/citations?user=1OnE7wUAAAAJ" class="prof_link">Scholar</a> &bull;
     <a href="https://github.com/anshpoonia" class="prof_link">Github</a> &bull;
     <a href="mailto:pooniaansh11@gmail.com" class="prof_link">Email</a> &bull;
-    <a href="/static/files/cv.pdf" class="prof_link">CV</a>
+    <a href="./static/files/cv.pdf" class="prof_link">CV</a>
 </p>
 
 <!--Profile Picture-->
@@ -96,6 +96,8 @@
     <li>My first <a href="https://arxiv.org/abs/2507.20936">paper</a> as an independent researcher has been accepted at
         EMNLP <i>Finding</i> 2025.
     </li>
+    <li>New Blog: <a href="./blog/review_system">Review System</a></li>
+    <li><a href="./blog">Blog</a> Initialized!!!</li>
 </ul>
 </p>
 
